--- a/src/reset.css
+++ b/src/reset.css
@@ -145,7 +145,7 @@ button {
   padding: 0;
   border-radius: 0;
   font-size: 16px;
-  outline: 0;
+  border: 1px solid;
   vertical-align: middle;
 }
 img {
