--- a/src/reset.css
+++ b/src/reset.css
@@ -1,3 +1,8 @@
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
 html,
 body,
 div,
@@ -121,34 +126,4 @@ q:after {
 table {
   border-collapse: collapse;
   border-spacing: 0;
-}
-* {
-  box-sizing: border-box;
-  list-style: none;
-  text-decoration: none;
-  margin: 0;
-  padding: 0;
-  border: 0;
-}
-body,
-table,
-tr,
-td {
-  font-size: 16px;
-  line-height: 24px;
-}
-input,
-textarea,
-select,
-button {
-  margin: 0;
-  padding: 0;
-  border-radius: 0;
-  font-size: 16px;
-  outline: 0;
-  vertical-align: middle;
-}
-img {
-  border: 0;
-  vertical-align: middle;
 }
